Add review book

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -16,5 +16,19 @@
   <% end %>
 </p>
 
+<%= form_with(model: @book_review, local: true) do |form| %>
+    <%= form.hidden_field :user_id, :value => current_user.id %>
+    <%= form.hidden_field :book_id, :value => @book.id %>
+
+  <div class="field">
+    <%= form.label :review %>
+    <%= form.text_area :review %>
+  </div>
+
+  <div class="actions">
+    <%= form.submit %>
+  </div>
+<% end %>
+
 <%= link_to 'Edit', edit_book_path(@book) %> |
 <%= link_to 'Back', books_path %>
