--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -30,5 +30,13 @@
   </div>
 <% end %>
 
+<h3>Review List</h3>
+  <ul>
+    <% @book.book_review.each do |book_review|%>
+      <li><%= book_review.review %>
+      (<%= book_review.user_id %>)</li>
+    <% end %>
+  </ul>
+
 <%= link_to 'Edit', edit_book_path(@book) %> |
 <%= link_to 'Back', books_path %>
