--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -34,7 +34,7 @@
   <ul>
     <% @book.book_review.each do |book_review|%>
       <li><%= book_review.review %>
-      (<%= book_review.user_id %>)</li>
+      (<%= book_review.user.name %>)</li>
     <% end %>
   </ul>
 
